--- a/retrieval.html
+++ b/retrieval.html
@@ -29,7 +29,7 @@ title: Publication
         {% include projects/menu.html %}
     </div> -->
     <div class="column is-12">
-            {% for project in site.applications.retrieval %}
+            {% for project in site.retrieval %}
             <div class="columns">
                 <div class="column is-3">
                     <figure class="image is-16by9"><img src="{{ project.image_small }}"></figure>
