--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@ layout: page
     <div class="column is-8">
         <div style="text-align: justify">
             <div class="content">
-                <h3 class="title">Bio</h3>
-                {{site.data.meta.index.bio | markdownify}}
+                <h3 class="title">About</h3>
+                {{site.data.meta.index.about | markdownify}}
             </div>
         </div>
     </div>
