--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ layout: page
 
 <section class="columns">
     <div class="column is-4">
-        <img src="/assets/Dell_Melissa_hi_res.jpg">
+        <img src="/assets/EconDL.png">
     </div>
     <div class="column is-4">
         
