Restructure website layout

--- a/packages.html
+++ b/packages.html
@@ -23,13 +23,13 @@ title: Publication
     }
 </script>
 
-<h3 class="title">Datasets</h3>
+<h3 class="title">Packages</h3>
 <div class="columns">
     <!-- <div class="column is-2 is-hidden-mobile">
         {% include projects/menu.html %}
     </div> -->
     <div class="column is-12">
-            {% for project in site.datasets %}
+            {% for project in site.packages %}
             <div class="columns">
                 <div class="column is-3">
                     <figure class="image is-16by9"><img src="{{ project.image_small }}"></figure>
