--- a/datasets.html
+++ b/datasets.html
@@ -37,7 +37,7 @@ title: Publication
                 <div class="column is-9">
                     <div class="content">
                         <h3 class="publication-title">
-                            <a href="{{ project.url }}">{{ project.title }}</a>
+                            <a href="{{ project.website }}">{{ project.title }}</a>
                         </h3>
                         
                         {% assign keywords = project.keywords | split: ',' %}
