Updated index page

--- a/index.html
+++ b/index.html
@@ -68,6 +68,17 @@ layout: page
 </section>
 
 <section class="columns">
+    <div class="column is-9">
+        <div style="text-align: justify">
+            <div class="content">
+                <h3 class="title">Research Vision</h3>
+                {{site.data.meta.index.research_vision | markdownify}}
+            </div>
+        </div>
+    </div>
+</section>
+
+<section class="columns">
     <div class="column is-10">
         <h3 class="title">Research Support</h3>
         <div class="sponsors">
