--- a/redirects/test-redirect.html
+++ b/redirects/test-redirect.html
@@ -23,24 +23,24 @@ title: Test Redirect
     }
 </script>
 
-<h3 class="title">Test redirect</h3>
+<h3 class="title">Paper redirects</h3>
 <div class="columns">
     <!-- <div class="column is-2 is-hidden-mobile">
         {% include projects/menu.html %}
     </div> -->
     <div class="column is-12">
         <div class="content">
-            <p><a href="https://econdl.org/redirects/publications/americanstories">americanstories</a></p>
-            <p><a href="https://econdl.org/redirects/publications/clippings">clippings/</a></p>
-            <p><a href="https://econdl.org/redirects/publications/effocr">effocr</a></p>
-            <p><a href="https://econdl.org/redirects/publications/entity">entity</a></p>
-            <p><a href="https://econdl.org/redirects/publications/headlines">headlines</a></p>
-            <p><a href="https://econdl.org/redirects/publications/homoglyphs">homoglyphs</a></p>
-            <p><a href="https://econdl.org/redirects/publications/layoutparser">layoutparser</a></p>
-            <p><a href="https://econdl.org/redirects/publications/linktransformer">linktransformer</a></p>
-            <p><a href="https://econdl.org/redirects/publications/newscopy">newscopy</a></p>
-            <p><a href="https://econdl.org/redirects/publications/newsdejavu">newsdejavu</a></p>
-            <p><a href="https://econdl.org/redirects/publications/newswire">newswire</a></p>
+            <p><a href="https://econdl.github.io/redirects/publications/americanstories">americanstories</a></p>
+            <p><a href="https://econdl.github.io/redirects/publications/clippings">clippings</a></p>
+            <p><a href="https://econdl.github.io/redirects/publications/effocr">effocr</a></p>
+            <p><a href="https://econdl.github.io/redirects/publications/entity">entity</a></p>
+            <p><a href="https://econdl.github.io/redirects/publications/headlines">headlines</a></p>
+            <p><a href="https://econdl.github.io/redirects/publications/homoglyphs">homoglyphs</a></p>
+            <p><a href="https://econdl.github.io/redirects/publications/layoutparser">layoutparser</a></p>
+            <p><a href="https://econdl.github.io/redirects/publications/linktransformer">linktransformer</a></p>
+            <p><a href="https://econdl.github.io/redirects/publications/newscopy">newscopy</a></p>
+            <p><a href="https://econdl.github.io/redirects/publications/newsdejavu">newsdejavu</a></p>
+            <p><a href="https://econdl.github.io/redirects/publications/newswire">newswire</a></p>
         </div>
     </div>
 </div>
