Fixed typos and unused modules

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@ layout: page
     </div> -->
 </section>
 
-<section class="columns">
+<!-- <section class="columns">
     <div class="column is-9">
         <div style="text-align: justify">
             <div class="content">
@@ -76,9 +76,9 @@ layout: page
             </div>
         </div>
     </div>
-</section>
+</section> -->
 
-<section class="columns">
+<!-- <section class="columns">
     <div class="column is-10">
         <h3 class="title">Research Support</h3>
         <div class="sponsors">
@@ -92,4 +92,4 @@ layout: page
             {% endfor %}
         </div>
     </div>
-</section>
+</section> -->
