Updated effocr redirect links

--- a/redirects/test-redirect.html
+++ b/redirects/test-redirect.html
@@ -32,7 +32,8 @@ title: Test Redirect
         <div class="content">
             <p><a href="https://econdl.github.io/redirects/publications/americanstories">americanstories</a></p>
             <p><a href="https://econdl.github.io/redirects/publications/clippings">clippings</a></p>
-            <p><a href="https://econdl.github.io/redirects/publications/effocr">effocr</a></p>
+            <p><a href="https://econdl.github.io/redirects/publications/effocr-package">effocr-package</a></p>
+            <p><a href="https://econdl.github.io/redirects/publications/effocr-method">effocr-method</a></p>
             <p><a href="https://econdl.github.io/redirects/publications/entity">entity</a></p>
             <p><a href="https://econdl.github.io/redirects/publications/headlines">headlines</a></p>
             <p><a href="https://econdl.github.io/redirects/publications/homoglyphs">homoglyphs</a></p>
