--- a/blog.html
+++ b/blog.html
@@ -11,6 +11,17 @@ title: Blog
         <div style="text-align: justify">
             <div class="content">
                 <h3 class="title">About</h3>
+            </div>
+        </div>
+    </div>
+
+</section>
+
+<section class="columns">
+
+    <div class="column is-8">
+        <div style="text-align: justify">
+            <div class="content">
                 {{site.data.meta.index.about | markdownify}}
             </div>
         </div>
@@ -21,7 +32,7 @@ title: Blog
     </div>
 </section>
 
-<br>
+<br><br>
 
 <nav class="pagination  is-small" role="navigation" aria-label="pagination" style="margin-top: -2.80rem">
     <a class="pagination-previous" {% if paginator.previous_page != nil %}href="{{ paginator.previous_page_path }}"{% else %}disabled{% endif %}>Previous</a>
