Updated front matter

--- a/blog.html
+++ b/blog.html
@@ -2,7 +2,7 @@
 layout: page
 pagination:
   enabled: true
-title: Knowledge Base
+title: Blog
 ---
 
 <section class="columns">
@@ -27,9 +27,9 @@ title: Knowledge Base
         </div>
     </div>
 
-    <div class="column is-2">
+    <!-- <div class="column is-2">
     
-    </div>
+    </div> -->
 
     <div class="column is-3">
         <img src="/assets/EconDL.png">
