--- a/blog.html
+++ b/blog.html
@@ -27,9 +27,9 @@ title: Blog
         </div>
     </div>
 
-    <!-- <div class="column is-2">
+    <div class="column is-2">
     
-    </div> -->
+    </div>
 
     <div class="column is-3">
         <img src="/assets/EconDL.png">
