Test: change paginated target to index.html

--- a/blog.html
+++ b/blog.html
@@ -7,7 +7,7 @@ title: Knowledge Base
 
 <section class="columns">
     <div class="column is-7">
-        <div class="content" style="text-align: justify;">
+        <div class="content" style="text-align: justify">
             <h3 class="title">About</h3>
         </div>
     </div>
@@ -18,7 +18,7 @@ title: Knowledge Base
 
 <section class="columns">
     <div class="column is-7">
-        <div class="content" style="text-align: justify;">
+        <div class="content" style="text-align: justify">
             {{site.data.meta.index.about | markdownify}}
         </div>
     </div>
